src/styles/global.css
@keyframes rotate {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

div::-webkit-scrollbar {
  width: 5px;
  height: 5px;
  background: rgba(254, 254, 254, 0.2);
}

div::-webkit-scrollbar-thumb {
  background: #3FF1E690;
  border-radius: 5px;
}


::-moz-selection {

  background-color: #14b8a61a;
  --tw-text-opacity: 1;
  color: rgb(94 234 212 / var(--tw-text-opacity));

}


::selection {
  background-color: #14b8a61a;
  --tw-text-opacity: 1;
  color: rgb(94 234 212 / var(--tw-text-opacity));
}

